--- a/templates/error.html
+++ b/templates/error.html
@@ -1,3 +1,16 @@
-<h1>
-    해당하는 결과가 없습니다.
-</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>
+        해당하는 결과가 없습니다.
+    </h1>
+    
+    <!-- 첫 번째 페이지로 돌아가는 버튼 -->
+    <a href="{% url 'first_page' %}">처음 페이지로</a>
+</body>
+</html>
