make PetBreed model & display description on result page - To do:Add data to PetBreed

--- a/templates/second.html
+++ b/templates/second.html
@@ -14,7 +14,7 @@
     <h2>예측 결과 : {{ detected_class }}</h2>
 
     <!-- 품종 설명 -->
-    <p>품종에 대한 설명 DB에서 가져와서 넣어주기!</p>
+    <p>{{detected_class_description}}</p>
 
     <!-- 네이버 뉴스 헤드라인 표시 -->
     <h3>네이버 뉴스 헤드라인 5가지!</h3>
