--- a/templates/error.html
+++ b/templates/error.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>
-        해당하는 결과가 없습니다.
+        해당하는 결과가 없습니다.<br>다른 이미지를 올려주세요.
     </h1>
     
     <!-- 첫 번째 페이지로 돌아가는 버튼 -->
