--- a/templates/first.html
+++ b/templates/first.html
@@ -4,32 +4,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>동물찾기</title>
+
+    <!-- 부트스트랩 링크 -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
-<body>
-    <h1>궁금한 품종의 사진을 입력해주세요!<br>(고양이와 강아지 사진만 부탁드립니다!)</h1>
+<body class="container mt-5">
+    <h1 class="mb-4 text-center">궁금한 품종의 사진을 입력해주세요!<br>(고양이와 강아지 사진만 부탁드립니다!)</h1>
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ form.as_p }}
+        <div class="form-group d-flex justify-content-center">
+            {{ form.image.label_tag }}
+            {{ form.image }}
+        </div>
 
-        <img id="preview_image" src="#" alt="Preview" style="display: none; max-width: 300px; max-height: 300px;">
 
-        <button type="submit">결과 확인</button>
+
+        <img id="preview_image" class="img-fluid mb-3 mx-auto d-block"
+            style="max-width: 300px; max-height: 300px; display: none;">
+
+
+        <button type="submit" class="btn btn-primary d-flex justify-content-center mx-auto">결과 확인</button>
     </form>
-</body>
-<script>
-    function preview_image(event) {
-        var reader = new FileReader();
-        reader.onload = function () {
-            var output = document.getElementById('preview_image');
-            output.src = reader.result;
-            output.style.display = 'block';
-        }
-        reader.readAsDataURL(event.target.files[0]);
-    }
 
-    document.getElementById('id_image').addEventListener('change', preview_image);
-</script>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+
+    <script>
+        function preview_image(event) {
+            var reader = new FileReader();
+            reader.onload = function () {
+                var output = document.getElementById('preview_image');
+                output.src = reader.result;
+                output.style.display = 'block';
+            }
+            reader.readAsDataURL(event.target.files[0]);
+        }
+
+        document.getElementById('id_image').addEventListener('change', preview_image);
+    </script>
+</body>
 
 </html>
