--- a/templates/second.html
+++ b/templates/second.html
@@ -15,15 +15,17 @@
       height: 100vh;
     }
 
-    #newsList li a{
-      color:black;
+    #newsList li a {
+      color: black;
+      font-size: 1.3rem;
     }
 
-    .centered{
+    .centered {
       display: flex;
       justify-content: center;
-      margin: 20px 0px; /* 원하는 만큼 여백 설정 */
-            
+      margin: 20px 0px;
+      /* 원하는 만큼 여백 설정 */
+
     }
   </style>
 </head>
@@ -31,10 +33,10 @@
 <body>
   <div class="container border">
     <div class="row">
-      <div class="col-md-6">
-      
+      <div class="text-center col-md-6">
+
         <!-- 이미지 표시 -->
-        <img src="{{ image_path }}" alt="Uploaded Image" width="300" style="margin-top:2rem;">
+        <img src="{{ image_path }}" alt="Uploaded Image" width="300" height="360" style="margin-top:2rem;">
 
         <!-- 모델 결과 및 품종 설명 -->
         <h2>예측 결과 : {{ detected_class_kor }}</h2>
@@ -80,13 +82,15 @@
             const headline = item[0];
             const link = item[1];
 
-            // 새로운 리스트 아이템을 생성하고 링크를 추가합니다.
             const listItem = document.createElement("li");
             const anchor = document.createElement("a");
             anchor.href = link;
-            anchor.textContent = headline;
 
-            // 리스트에 아이템을 추가합니다.
+            // 텍스트를 50자로 자르고, 넘어가면 '...'을 추가하여 표시
+            const truncatedHeadline = headline.length > 30 ? headline.substring(0, 30) + '...' : headline;
+
+            anchor.textContent = truncatedHeadline;
+
             listItem.appendChild(anchor);
             newsList.appendChild(listItem);
           });
